# AD698-generative-ai-for-BA

./: .RData  .Rhistory  .env  .gitignore  .nojekyll  .vdoc.1457830e-acb8-4378-aa7c-ee41a8d9b409.py  Course Structure.Rproj  README.md  _module_qmd_files.txt  _quarto.yml  _write_md.py  copilot-instructions.md  deliverables.docx  deliverables.html  deliverables.qmd  deliverables.quarto_ipynb_1  deliverables.quarto_ipynb_2  find_images.py  index.docx  index.html  index.qmd  index.quarto_ipynb_1  index.quarto_ipynb_2  introduction-to-course.html  introduction-to-course.pptx  introduction-to-course.qmd  main.py  output.txt  project_root.py  pyproject.toml  python_bootstrap.py  references.bib  requirements.txt  robots.txt  schedule.docx  schedule.html  schedule.qmd  schedule.quarto_ipynb_1  schedule.quarto_ipynb_2  search.json  (+2 more)
.jupyter_cache/: global.db
M0/: .vdoc.3e6c791d-b7e9-462e-b5d0-e19faf5ef3c8.py  .vdoc.e28d6094-b45c-44bb-a30e-95b54310cc21.py  M0_A.qmd  M0_A.quarto_ipynb_1  M0_A.quarto_ipynb_2  M0_A.quarto_ipynb_3  M0_A.quarto_ipynb_4  M0_LN1.qmd  M0_LN1.quarto_ipynb_1  M0_LN1.quarto_ipynb_2  M0_LN1.quarto_ipynb_3  M0_LN1.quarto_ipynb_4  M0_LN2.qmd  M0_LN2.quarto_ipynb_1  M0_LN2.quarto_ipynb_2  M0_LN2.quarto_ipynb_3  M0_LN2.quarto_ipynb_4  M0_LN3.qmd  M0_LN3.quarto_ipynb_1  M0_LN3.quarto_ipynb_2  M0_LN3.quarto_ipynb_3  M0_LN3.quarto_ipynb_4  M0_Lab1.html  M0_Lab1.pptx  M0_Lab1.qmd  M0_Lab1.quarto_ipynb_1  M0_Lab1.quarto_ipynb_2  M0_Lab2.html  M0_Lab2.pptx  M0_Lab2.qmd  M0_Lab2.quarto_ipynb_1  M0_Lab2.quarto_ipynb_2  M0_Lab3.qmd  M0_Lab3.quarto_ipynb_1  M0_Lab3.quarto_ipynb_2  M0_Lab3.quarto_ipynb_3  M0_Lab3.quarto_ipynb_4  M0_P1.qmd  M0_P2.qmd  M0_P2.quarto_ipynb_1  (+23 more)
M00/: M00_A.html  M00_A.qmd  M00_Highlights.qmd  M00_LN01.html  M00_LN01.qmd  M00_LN02.qmd  M00_Lab01.html  M00_P01.html  M00_P01.pptx  M00_P01.qmd  M00_P02.html  M00_P02.pptx  M00_P02.qmd
M01/: M01_LN01.html  M01_LN01.qmd  M01_Lab01.html  M01_Lab02.qmd  M01_P01.html  M01_P01.pptx  M01_P01.qmd  M01_P02.html  M01_P02.pptx  M01_P02.qmd  M01_Proj.html  M01_Proj.qmd
M02/: M02_A.qmd  M02_Highlights.qmd  M02_LN01.html  M02_LN01.qmd  M02_LN02.qmd  M02_Lab01.html  M02_Lab01.qmd  M02_Lab02.qmd  M02_P01.html  M02_P01.pptx  M02_P01.qmd  M02_P02.html  M02_P02.pptx  M02_P02.qmd  M02_Proj.html  M02_Proj.qmd
M03/: M03_Highlights.qmd  M03_LN01.html  M03_LN01.qmd  M03_LN02.qmd  M03_Lab01.html  M03_Lab01.qmd  M03_Lab02.qmd  M03_P01.html  M03_P01.pptx  M03_P01.qmd  M03_P02.html  M03_P02.pptx  M03_P02.qmd  M03_Proj.html  M03_Proj.qmd
M04/: M04_A.html  M04_Highlights.qmd  M04_LN01.html  M04_LN01.qmd  M04_LN02.qmd  M04_Lab01.html  M04_Lab01.qmd  M04_P01.html  M04_P01.pptx  M04_P01.qmd  M04_P02.html  M04_P02.pptx  M04_P02.qmd  M04_Proj.html  M04_Proj.qmd  M04_Wrapup.qmd
M05/: M05_A.qmd  M05_Highlights.qmd  M05_LN01.html  M05_LN01.qmd  M05_Lab01.html  M05_Lab01.qmd  M05_Lab02.qmd  M05_P01.html  M05_P01.pptx  M05_P01.qmd  M05_P02.html  M05_P02.pptx  M05_P02.qmd  M05_Proj.html  M05_Proj.qmd  M05_Wrapup.qmd
M06/: M06_A.qmd  M06_Highlights.qmd  M06_LN01.html  M06_LN01.qmd  M06_LN02.qmd  M06_Lab01.html  M06_Lab02.qmd  M06_P01.html  M06_P01.pptx  M06_P01.qmd  M06_P02.html  M06_P02.pptx  M06_P02.qmd  M06_Proj.html  M06_Proj.qmd
M07/: M07_A.html  M07_A.qmd  M07_Highlights.qmd  M07_LN01.html  M07_LN01.qmd  M07_Lab01.html  M07_Lab02.qmd  M07_P01.html  M07_P01.pptx  M07_P01.qmd  M07_P02.html  M07_P02.pptx  M07_P02.qmd  M07_Proj.html  M07_Proj.qmd
M1/: .vdoc.04a44b96-71ad-4a6a-93c9-160812131bec.py  .vdoc.2513deb5-d3ac-48f3-8646-b52a2753bc68.py  .vdoc.3149ec22-5804-48e9-8a96-dbe33181f785.py  .vdoc.4ad30621-85ba-453b-ac9d-0ef7b0cd7fad.py  .vdoc.963f754a-b9c5-41f3-8db2-d83cb650ec24.py  .vdoc.9ff85633-eaec-43ce-aab3-447854237c0e.py  .vdoc.a609f49e-5014-4e14-925b-4cfbe638c2be.py  .vdoc.d8482f03-84c1-4ef6-8758-41e24731e729.py  .vdoc.da1b00f5-6a2e-47a4-be86-122aee8d434d.py  .vdoc.e8713c20-0767-47ea-8d32-b999653b11e3.py  .vdoc.fa609937-7283-41a0-838a-589652b41577.py  M01_A.qmd  M01_A.quarto_ipynb_1  M01_A.quarto_ipynb_2  M01_A.quarto_ipynb_3  M01_A.quarto_ipynb_4  M01_LN1.docx  M01_LN1.qmd  M01_LN1.quarto_ipynb_1  M01_LN1.quarto_ipynb_2  M01_LN1.quarto_ipynb_3  M01_LN1.quarto_ipynb_4  M01_LN2.qmd  M01_LN2.quarto_ipynb_1  M01_LN2.quarto_ipynb_2  M01_LN2.quarto_ipynb_3  M01_LN2.quarto_ipynb_4  M01_Lab1.qmd  M01_Lab1.quarto_ipynb_1  M01_Lab1.quarto_ipynb_2  M01_Lab2.qmd  M01_Lab2.quarto_ipynb_1  M01_P1.html  M01_P1.qmd  M01_P1.quarto_ipynb_1  M01_P1.quarto_ipynb_2  M01_P1.quarto_ipynb_3  M01_P1.quarto_ipynb_4  M01_P2.html  M01_P2.qmd  (+93 more)
M2/: .vdoc.efb6d0cf-0dd8-432d-8e4f-c789d2d26cff.py  .vdoc.fe6d240a-bb4c-4618-8291-cfc77e6f83e4.py  M02_A.qmd  M02_A.quarto_ipynb_1  M02_A.quarto_ipynb_2  M02_A.quarto_ipynb_3  M02_A.quarto_ipynb_4  M02_LN1.aux  M02_LN1.docx  M02_LN1.qmd  M02_LN1.quarto_ipynb_1  M02_LN1.tex  M02_LN2.docx  M02_LN2.html  M02_LN2.qmd  M02_LN2.quarto_ipynb_1  M02_LN2.quarto_ipynb_2  M02_LN2.quarto_ipynb_3  M02_LN2.quarto_ipynb_4  M02_Lab1.qmd  M02_Lab1.quarto_ipynb_1  M02_Lab1.quarto_ipynb_2  M02_Lab1.quarto_ipynb_3  M02_Lab1.quarto_ipynb_4  M02_Lab2.qmd  M02_P1.html  M02_P1.pptx  M02_P1.qmd  M02_P1.quarto_ipynb_1  M02_P1.quarto_ipynb_2  M02_P1.quarto_ipynb_3  M02_P2.html  M02_P2.pptx  M02_P2.qmd  M02_P2.quarto_ipynb_1  M02_P2.quarto_ipynb_10  M02_P2.quarto_ipynb_11  M02_P2.quarto_ipynb_12  M02_P2.quarto_ipynb_13  M02_P2.quarto_ipynb_14  (+97 more)
M3/: M03_A.qmd  M03_LN1.docx  M03_LN1.qmd  M03_LN1.quarto_ipynb_1  M03_LN1.quarto_ipynb_2  M03_LN1.quarto_ipynb_3  M03_LN2.docx  M03_LN2.qmd  M03_LN2.quarto_ipynb_1  M03_LN2.quarto_ipynb_2  M03_Lab1.qmd  M03_Lab1.quarto_ipynb_1  M03_Lab1.quarto_ipynb_2  M03_Lab1.quarto_ipynb_3  M03_Lab2.qmd  M03_P1.html  (+20 more)
(+1107 files in other folders)
