[project]
name = "ad698-generative-ai-for-ba"
version = "0.2.0"
description = "698 Generative AI for Business Analytics"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastai>=2.1.10",
    "google-genai>=1.61.0",
    "jupyter>=1.1.1",
    "jupyterlab>=4.5.3",
    "kaleido>=1.2.0",
    "keras>=3.13.2",
    "lxml>=6.0.2",
    "matplotlib>=3.10.8",
    "nltk>=3.9.2",
    "numpy>=2.4.2",
    "openai>=2.16.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.0",
    "pillow>=12.1.0",
    "plotly>=6.5.2",
    "pywaffle>=1.1.1",
    "quarto>=0.1.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.2.2",
    "setuptools>=80.10.2",
    "spacy>=3.8.11",
    "tensorflow>=2.20.0",
    # "torch>=2.10.0+cu130",
    # "torchaudio>=2.10.0+cu130",
    # "torchvision>=0.25.0+cu130",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    "torchvision>=0.25.0",
    "tqdm>=4.67.3",
    "transformers>=5.0.0",
    "wheel>=0.46.3",
    "xgboost>=3.1.3",
]

# Specific versions of torch, torchvision, and torchaudio are installed based on the extra feature
[project.optional-dependencies]
cpu = ["torch>=2.10.0", "torchvision>=0.25.0", "torchaudio>=2.10.0"]
cu130 = ["torch>=2.10.0", "torchvision>=0.25.0", "torchaudio>=2.10.0"]


[tool.uv]
# The cpu and cu130 extras are mutually exclusive, you can't use both at the same time
conflicts = [[{ extra = "cpu" }, { extra = "cu130" }]]

# The package is only installed on Linux systems
# environments = ["sys_platform == 'linux' and os_name == 'posix'"]

[tool.uv.sources]
# The torch, torchvision, and torchaudio packages are installed from the pytorch-cpu and pytorch-cu130 indexes
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu130", extra = "cu130" },
]
torchvision = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu130", extra = "cu130" },
]
torchaudio = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu130", extra = "cu130" },
]


[[tool.uv.index]]
# The pytorch-cpu index is used to install the torch, torchvision, and torchaudio packages
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
