[project]
name = "ad698-generative-ai-for-ba"
version = "0.2.0"
description = "698 Generative AI for Business Analytics"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "accelerate>=1.13.0",
    "beautifulsoup4>=4.14.3",
    "faiss-cpu>=1.13.2",
    "fastai>=2.1.10",
    "google-genai>=1.61.0",
    "jupyter>=1.1.1",
    "jupyter-cache>=1.0.1",
    "jupyterlab>=4.5.3",
    "kaleido>=1.2.0",
    "keras>=3.13.2",
    "langchain>=0.3.28",
    "langchain-community>=0.3.31",
    "langchain-core>=0.3.84",
    "langchain-openai>=0.2.13",
    "lxml>=6.0.2",
    "manim>=0.20.1",
    "matplotlib>=3.10.8",
    "nltk>=3.9.2",
    "numpy>=2.4.2",
    "openai>1.56.2",
    "openpyxl>=3.1.5",
    "plotly>=6.5.2",
    "pywaffle>=1.1.1",
    "quarto>=0.1.0",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.2.2",
    "setuptools>=80.10.2",
    "spacy>=3.8.11",
    "svgwrite>=1.4.3",
    "tensorflow>=2.20.0",
    # "torch>=2.10.0+cu130",
    # "torchaudio>=2.10.0+cu130",
    # "torchvision>=0.25.0+cu130",
    "torchtext>=0.18.0",
    "tqdm>=4.67.3",
    "transformers>=5.0.0",
    "wandb>=0.25.1",
    "wheel>=0.46.3",
    "xgboost>=3.1.3",
    "yfinance>=1.2.0",
]

# Specific versions of torch, torchvision, and torchaudio are installed based on the extra feature
[project.optional-dependencies]
cpu = [
  "torch>=2.2.0",
  "torchvision>=0.17.0",
  "torchaudio>=2.2.0",
]

cu128 = [
  "torch>=2.2.0",
  "torchvision>=0.17.0",
  "torchaudio>=2.2.0",
]

cu130 = [
  "torch>=2.2.0",
  "torchvision>=0.17.0",
  "torchaudio>=2.2.0",
]

[tool.uv]
# The cpu and cu130 extras are mutually exclusive, you can't use both at the same time
conflicts = [
  [{ extra = "cpu" }, { extra = "cu128" }],
  [{ extra = "cpu" }, { extra = "cu130" }],
  [{ extra = "cu128" }, { extra = "cu130" }],
]

# The package is only installed on Linux systems
# environments = ["sys_platform == 'linux' and os_name == 'posix'"]

[tool.uv.sources]
# The torch, torchvision, and torchaudio packages are installed from the pytorch-cpu and pytorch-cu130 indexes
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu128", extra = "cu128", marker = "sys_platform == 'win32'" },
  { index = "pytorch-cu130", extra = "cu130", marker = "sys_platform == 'linux'" },
]

torchvision = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu128", extra = "cu128", marker = "sys_platform == 'win32'" },
  { index = "pytorch-cu130", extra = "cu130", marker = "sys_platform == 'linux'" },
]

torchaudio = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu128", extra = "cu128", marker = "sys_platform == 'win32'" },
  { index = "pytorch-cu130", extra = "cu130", marker = "sys_platform == 'linux'" },
]



[[tool.uv.index]]
# The pytorch-cpu index is used to install the torch, torchvision, and torchaudio packages
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
